--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "matplotlib>=3.10.3",
     "torch>=2.7.1",
+    "torchvision>=0.22.1",
+    "tqdm>=4.67.1",
 ]
